--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ two_columns_layout: true
 
 
 # Advanced Settings
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "https://codetips.co.uk" # the subpath of your site, e.g. /blog
 url: "https://new.codetips.co.uk" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 language: "en"
