--- a/src/yml/advanced.yml
+++ b/src/yml/advanced.yml
@@ -1,5 +1,5 @@
-baseurl: "https://codetips.co.uk" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://codetips.co.uk" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 language: "en"
 categories_folder: category
